[package]
name = "intersight_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-signature-normalization-reqwest = { version = "0.2.0", default-features = false, features = ["sha-2"] }
reqwest = "0.11"
sha2 = "0.9"
thiserror = "1.0.32"
base64 = "0.13.0"
openssl = "0.10.41"
httpdate = "1.0.2"
serde_json = "1.0.83"
log = "0.4.17"