[package]
name = "intersight_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-signature-normalization-reqwest = { version = "0.13" }
reqwest = "0.12"
sha2 = "0.10"
thiserror = "2"
base64 = "0.22.0"
httpdate = "1.0.2"
serde_json = "1.0.83"
log = "0.4.17"
ring = "0.17"
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
tokio = { version = "1.20.4", features = ["full"] }
