[package]
name = "intersight_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
intersight_api = { path = "../intersight_api" }
serde_json = "1.0.83"