[package]
name = "intersight_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
intersight_api = { path = "../intersight_api" }
serde_json = "1.0.83"
thiserror = "1.0.32"
anyhow = "1.0.63"
config = "0.13.2"
serde = "1.0.144"
clap = { version = "3.2.20", features = ["derive"] }
chrono = "0.4.22"

#Add opentelemetry
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.9.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
