[package]
name = "intersight_otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.4", features = ["full"] }
env_logger = "0.11.2"
log = "0.4.17"
intersight_api = { path = "../intersight_api" }
serde_json = "1.0.83"
thiserror = "1.0.32"
anyhow = "1.0.63"
config = "0.13.2"
serde = "1.0.144"
clap = { version = "4.5.1", features = ["derive"] }
chrono = "0.4"

#Add opentelemetry
# opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
# opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"]}
# opentelemetry-otlp = { version = "0.13.0", features = ["tonic", "metrics"] }
# opentelemetry-semantic-conventions = { version = "0.12.0"}
# futures-util = { version = "0.3", default-features = false, features = ["std"] }

opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
opentelemetry-proto = { version = "0.3.0", features = ["gen-tonic", "metrics"]}
tonic = "0.12.3"
